--- a/public_html/main.css
+++ b/public_html/main.css
@@ -26,7 +26,7 @@ a {
     -ms-transition:.5s;
     -moz-transition:.5s;
     -webkit-transition:.5s;
-    test-decoration: none;
+    text-decoration: none;
 }
 
 a:link, a:visited {
