--- a/public_html/main.css
+++ b/public_html/main.css
@@ -35,3 +35,16 @@ a:link, a:visited {
 a:hover, a:active {
     color: #555;
 }
+
+div.pagination div#right {
+    text-align: right;
+}
+	
+div.pagination div#left {
+    text-align: left;
+}
+	
+div.pagination div {
+    display: inline-block;
+    width: 49.67%;
+}
